--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,14 @@
     "perfect-scrollbar": "0.6.10",
     "toastr": "2.1.2",
     "angular-filter": "^0.5.8",
-    "lodash": "^4.11.2"
+    "lodash": "^4.11.2",
+    "angular-moment-picker": "moment-picker#^0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "1.5.0"
   },
   "resolutions": {
-    "angular": "1.5.0"
+    "angular": "^1.4.8"
   },
   "overrides": {
     "angular-material": {
